--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -17,13 +17,11 @@
   
     &__social-media {
       padding-top: 15px;
+      position: relative;
       margin: 0;
   
       a {
         -webkit-tap-highlight-color: transparent;
-      }
-      
-      &__icon {
         width: 34px;
         height: 34px;
         margin: 0 5px;
@@ -33,6 +31,7 @@
     &__logo {
       width: 76px;
       padding-top: 30px;
+      margin: auto;
     }
   
     &__copyright-text {
